--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     </header>
     <header>
     <h1 class="titulo-estilo3">Título 3 - Estilo Roxo</h1>
-    <p class="texto-estilo1">Este é o terceiro parágrafo com estilo personalizado.</p>
+    <p class="texto-estilo3">Este é o terceiro parágrafo com estilo personalizado.</p>
 
     <h1 class="titulo-estilo4">Título 4 - Estilo Rosa</h1>
-    <p class="texto-estilo2">Este é o quarto parágrafo com um estilo diferente.</p>
+    <p class="texto-estilo4">Este é o quarto parágrafo com um estilo diferente.</p>
 </header>
+<h1 class="video"> Video Patinhos Coloridos</h1> 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZL9pTiY1RPg?si=krjeibuKo-BFshJP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
